# robot_ddzz_code

./: README.md  imu_calib.yaml
ddbot_base/: CMakeLists.txt  package.xml
ddbot_base/base_driver_arduino/: platformio.ini
ddbot_base/src/: ddbot_base.cpp  ddbot_hardware.cpp
ddbot_control/: CMakeLists.txt  package.xml
ddbot_control/config/: ddbot_control.yaml
ddbot_control/launch/: ddbot_control.launch
ddzz_nav/: CMakeLists.txt  package.xml
ddzz_nav/scripts/: Actionneurs.py  ActionneursSimu.py  Homologation.py  MatchSimu.py  Simulateur.py  cam.py  camera_localization.py  camera_localization_old.py  gotogoal.py  gotogoalV2.py  gotogoalV3.py  lidar.py  lidar_test.py  main.py  round_trip.py  test.py  test_bridge.py
ddzz_nav/src/: gotogoal.py
ddzz_pose_estimation/: CMakeLists.txt  package.xml
ddzz_pose_estimation/launch/: dual_ekf_navsat_example.launch  ekf_nodelet_template.launch  ekf_template.launch  navsat_transform_template.launch  pose_estimation.launch  pose_estimation2.launch  pose_estimation3.launch  pose_estimation_android.launch  ukf_template.launch
ddzz_pose_estimation/params/: ekf.yaml  ukf_template.yaml
ddzz_pose_estimation/scripts/: convert_imu_android.py
diffbot_base/: CMakeLists.txt
diffbot_base/config/: base.yaml
diffbot_base/launch/: diffbot.launch  test_pid.launch
diffbot_base/src/: pub_pid.py  test_pid.cpp
diffbot_bringup/launch/: bringup.launch  bringup_arduino_only.launch  minimal.launch
diffbot_control/config/: diffbot_control.yaml
diffbot_control/launch/: diffbot.launch  diffbot_control.launch  diffbot_rviz.launch
(+61 files in other folders)
